--- a/.env
+++ b/.env
@@ -30,6 +30,6 @@ APP_SECRET=470295b4e6f7fc8435a3048278a329fa
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/kalitics?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/kalitics"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
